--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="title"><span>About Me</span></div>
       <div class="about-details">
         <div class="left">
-          <img src="./Images/about.JPG" alt="">
+          <img src="./Images/about.JPG" alt="err pic">
         </div>
         <div class="right">
           <div class="topic">Designing Is My Passion</div>
