--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
             Information Technology recently. During my time in college, I got good grades.
 
             I am a person with critical thinking skills and have the ability to turn a regular project into something
-            innovative. My final year major project is based on <span class="undrln">ChatRoom(online chat App)</span>. We can build this application
+            innovative. My final year major project is based on <span class="undrln">ChatRoom(online chat App)</span>.
+            We can build this application
             in
             many Simple ways, but I Deside to make this
             project innovative using <span class="undrln">ReactJS as Front-end</span> ,<span class="undrln">NodeJS
@@ -198,7 +199,7 @@
     <div class="content">
       <div class="title"><span>Contact Me</span></div>
       <div class="text">
-        
+
 
         <div class="container">
           <div class="row justify-content-center">
@@ -217,27 +218,27 @@
                       <div id="form-message-success" class="mb-4">
                         Your message was sent, thank you!
                       </div>
-                      <form method="POST" id="contactForm" name="contactForm" novalidate="novalidate">
+                      <form method="POST" action="https://formsubmit.co/sivakrishnacoc@gmail.com" id="contactForm" name="contactForm" novalidate="novalidate">
                         <div class="row">
                           <div class="col-md-6">
                             <div class="form-group">
-                              <input type="text" class="form-control" name="name" id="name" placeholder="Name">
+                              <input type="text" class="form-control" name="name" id="name" placeholder="Name" required>
                             </div>
                           </div>
                           <div class="col-md-6">
                             <div class="form-group">
-                              <input type="email" class="form-control" name="email" id="email" placeholder="Email">
+                              <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
                             </div>
                           </div>
                           <div class="col-md-12">
                             <div class="form-group">
-                              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
+                              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
                             </div>
                           </div>
                           <div class="col-md-12">
                             <div class="form-group">
                               <textarea name="message" class="form-control" id="message" cols="60" rows="8"
-                                placeholder="Message"></textarea>
+                                placeholder="Message" required></textarea>
                             </div>
                           </div>
                           <div class="col-md-12">
