--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style1.css">
   <!-- Fontawesome CDN Link -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -69,7 +70,8 @@
         </div>
         <div class="right">
           <div class="topic">Designing Is My Passion</div>
-          <p>Hi... I am SivaKrishna. I have completed my Bachelor's degree from Bharathiyar University, specializing in
+          <p class="para">Hi... I am SivaKrishna. I have completed my Bachelor's degree from Bharathiyar University,
+            specializing in
             Information Technology recently. During my time in college, I got good grades.
 
             I am a person with critical thinking skills and have the ability to turn a regular project into something
@@ -99,7 +101,7 @@
       <div class="skills-details">
         <div class="text">
           <div class="topic">Skills Reflects Our Knowledge</div>
-          <p>Looking forward to earning the position of Developer at a leading organization to enhance my
+          <p class="para">Looking forward to earning the position of Developer at a leading organization to enhance my
             skills in programming to generate high-end solutions to general software issues along with drawing better
             user experience</p>
           <div class="experience">
@@ -113,7 +115,7 @@
             <div class="per">72%</div>
           </div>
           <div class="box">
-            <div class="topic">API Consepts</div>
+            <div class="topic">React JS</div>
             <div class="per">80%</div>
           </div>
           <div class="box">
@@ -125,8 +127,8 @@
             <div class="per">75%</div>
           </div>
           <div class="box">
-            <div class="topic">React JS</div>
-            <div class="per">64%</div>
+            <div class="topic">API Consepts</div>
+            <div class="per">65%</div>
           </div>
           <div class="box">
             <div class="topic">Google(Debug Error)</div>
@@ -142,53 +144,74 @@
     <div class="content">
       <div class="title"><span>My Works</span></div>
       <div class="boxes">
+
         <div class="box">
-          <div class="icon">
-            <i class="fas fa-desktop"></i>
-          </div>
-          <div class="topic">Web Devlopment</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem
-            eligendi?</p>
+          <a target="_blank" href="https://github.com/sivakrishnacode/todolistV1">
+            <div class="icon">
+              <i class="fa-solid fa-clipboard"></i>
+            </div>
+            <div class="topic">ToDo List</div>
+            <p>It's a list of tasks you need to complete or things that you want to do. Most typically, they're
+              organised in order of priority <br>Read more...</p>
+          </a>
+        </div>
+
+
+
+        <div class="box">
+          <a target="_blank" href="">
+            <div class="icon">
+              <i class="fa-solid fa-comments"></i>
+            </div>
+            <div class="topic">Online Chat App</div>
+            <p>Creating real time chat application with help of ReactJS as Front-end,NodeJS as back-end and Firebase for
+              user-login<br>Read more...</p>
+          </a>
+
+        </div>
+
+
+        <div class="box">
+          <a target="_blank" href="https://github.com/sivakrishnacode/WeatherApi-project">
+            <div class="icon">
+              <i class="fas fas-solid fa-cloud"></i>
+            </div>
+            <div class="topic">WeatherApi Project</div>
+            <p>To retrieve a user's location, we'll be using the OpenWeather Web API to auto-detect the Weather
+              conditions<br>Read more...</p>
+          </a>
+
         </div>
         <div class="box">
-          <div class="icon">
-            <i class="fas fa-paint-brush"></i>
-          </div>
-          <div class="topic">Graphic Design</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem
-            eligendi?</p>
+          <a target="_blank" href="">
+            <div class="icon">
+              <i class="fas fas-solid fa-id-card"></i>
+            </div>
+            <div class="topic">My Portfolio</div>
+            <p>My portfolio is a compilation of materials that exemplifies my beliefs, skills, qualifications,
+              education, training and experiences. It provides insight into my personality and work ethic.<br>Read
+              more...</p>
+          </a>
+
         </div>
         <div class="box">
-          <div class="icon">
-            <i class="fas fa-chart-line"></i>
-          </div>
-          <div class="topic">Digital Marketing</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem
-            eligendi?</p>
+          <a target="_blank" href="">
+            <div class="icon">
+              <i class="fa-solid fa-person-digging"></i>
+            </div>
+            <div class="topic">Currently Working on it</div>
+            <p>--</p>
+          </a>
+
         </div>
         <div class="box">
-          <div class="icon">
-            <i class="fab fa-android"></i>
-          </div>
-          <div class="topic">Icon Design</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem
-            eligendi?</p>
-        </div>
-        <div class="box">
-          <div class="icon">
-            <i class="fas fa-camera-retro"></i>
-          </div>
-          <div class="topic">Photography</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem
-            eligendi?</p>
-        </div>
-        <div class="box">
-          <div class="icon">
-            <i class="fas fa-tablet-alt"></i>
-          </div>
-          <div class="topic">Apps Devlopment</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem
-            eligendi?</p>
+          <a target="_blank" href="">
+            <div class="icon">
+              <i class="fa-solid fa-person-digging"></i>
+            </div>
+            <div class="topic">Currently Working on it</div>
+            <p>--</p>
+          </a>
         </div>
       </div>
     </div>
@@ -218,7 +241,8 @@
                       <div id="form-message-success" class="mb-4">
                         Your message was sent, thank you!
                       </div>
-                      <form method="POST" action="https://formsubmit.co/sivakrishnacoc@gmail.com" id="contactForm" name="contactForm" novalidate="novalidate">
+                      <form method="POST" action="https://formsubmit.co/sivakrishnacoc@gmail.com" id="contactForm"
+                        name="contactForm" novalidate="novalidate">
                         <div class="row">
                           <div class="col-md-6">
                             <div class="form-group">
@@ -227,12 +251,14 @@
                           </div>
                           <div class="col-md-6">
                             <div class="form-group">
-                              <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
+                              <input type="email" class="form-control" name="email" id="email" placeholder="Email"
+                                required>
                             </div>
                           </div>
                           <div class="col-md-12">
                             <div class="form-group">
-                              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
+                                required>
                             </div>
                           </div>
                           <div class="col-md-12">
