--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
       </ul>
       <div class="media-icons">
         <a href="https://github.com/sivakrishnacode" target="_blank"><i class="fab fa-github"></i></a>
-
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="https://stackoverflow.com/users/19687154/siva-krishna"><i class="fa-brands fa-stack-overflow"></i></a>
+        <a href="https://www.instagram.com/____siva19/"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
     <div class="menu-btn">
@@ -54,9 +53,12 @@
         <div class="text-three">Full-Stack Developer</div>
         <div class="text-four">From Coimbatore, India</div>
       </div>
-      <div class="button">
-        <button>Hire Me</button>
-      </div>
+      <a href="#contact">
+        <div class="button">
+          <button>Hire Me</button>
+        </div>
+      </a>
+
     </div>
   </section>
 
@@ -85,9 +87,12 @@
             I always put quality on top of anything, and whatever projects I made were real-life projects. I also
             possess good communication skills and would like to improve my skills by working in your company.
           </p>
-          <div class="button">
-            <button>Download CV</button>
-          </div>
+          <a href="https://drive.google.com/file/d/1_GO8G6fDT9E3_BV3bTvx0RWAnvphPTgb/view" target="_blank">
+            <div class="button">
+              <button>Download CV</button>
+            </div>
+          </a>
+
         </div>
       </div>
     </div>
@@ -131,7 +136,7 @@
             <div class="per">65%</div>
           </div>
           <div class="box">
-            <div class="topic">StackOverFlow(Debug Error)</div>
+            <div class="topic">Google(Debug Error)</div>
             <div class="per">100%</div>
           </div>
         </div>
@@ -155,21 +160,16 @@
               organised in order of priority <br>Read more...</p>
           </a>
         </div>
-
-
-
         <div class="box">
-          <a target="_blank" href="">
+          <a target="_blank" href="https://github.com/sivakrishnacode/BlogApp_V1-without-DB">
             <div class="icon">
-              <i class="fa-solid fa-comments"></i>
+              <i class="fas fas-solid fa-id-card"></i>
             </div>
-            <div class="topic">Online Chat App</div>
-            <p>Creating real time chat application with help of ReactJS as Front-end,NodeJS as back-end and Firebase for
-              user-login<br>Read more...</p>
+            <div class="topic">Blog App v1</div>
+            <p>Blog Application for Creating Own Posts in our website with help of EJS &<br> NODE JS<br>Read more...</p>
           </a>
 
         </div>
-
 
         <div class="box">
           <a target="_blank" href="https://github.com/sivakrishnacode/WeatherApi-project">
@@ -183,24 +183,26 @@
 
         </div>
         <div class="box">
-          <a target="_blank" href="">
+          <a target="_blank" href="https://github.com/sivakrishnacode/BlogApp_v2-With-DB">
             <div class="icon">
               <i class="fas fas-solid fa-id-card"></i>
             </div>
-            <div class="topic">My Portfolio</div>
-            <p>My portfolio is a compilation of materials that exemplifies my beliefs, skills, qualifications,
-              education, training and experiences. It provides insight into my personality and work ethic.<br>Read
-              more...</p>
+            <div class="topic">BlogApp_v2 with DB</div>
+            <p>This is a Advanced model of our Blog Application for Creating Own Posts in our website with help of EJS ,
+              NODE JS & MONGODB<br>Read more...</p>
           </a>
 
         </div>
+       
+
         <div class="box">
           <a target="_blank" href="">
             <div class="icon">
-              <i class="fa-solid fa-person-digging"></i>
+              <i class="fa-solid fa-comments"></i>
             </div>
-            <div class="topic">Currently Working on it</div>
-            <p>--</p>
+            <div class="topic">Online Chat App</div>
+            <p>Creating real time chat application with help of ReactJS as Front-end,NodeJS as back-end and Firebase for
+              user-login<br>(Currently Working On It)<br>Read more...</p>
           </a>
 
         </div>
@@ -227,7 +229,7 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-md-6 text-center mb-5">
-              <h2 class="heading-section">Looking for A Good Candidate</h2>
+              <h2 class="heading-section">Looking for A Good Candidate ?</h2>
             </div>
           </div>
           <div class="row justify-content-center">
