--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="per">65%</div>
           </div>
           <div class="box">
-            <div class="topic">StackOverFlow(Debug Error)</div>
+            <div class="topic">StackOverFlow</div>
             <div class="per">100%</div>
           </div>
         </div>
